--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
     <link rel="stylesheet" href="public/css/main.css" />
 </head>
 <body>
-    
+    <div class="flex flex-col font-sans">
+        <div class="top">
+            <p>404 not found</p>
+        </div>
+        <main class="font-mono">
+            <header>
+                <h1>I have bad news for you</h1>
+            </header>
+            <section>
+                <p>The page you are looking for might be removed or is temporarily unavailable</p>
+            </section>
+        </main>
+        <footer>
+            <p>Thinkverse @ <a href="https://devchallenges.io">DevChallenges.io</a></p>
+        </footer>
+    </div>
 </body>
 </html>
