Add "back to homepage" button

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <section>
                 <p>The page you are looking for might be removed or is temporarily unavailable</p>
             </section>
+            <footer>
+                <button class="font-mono">Back to homepage</button>
+            </footer>
         </main>
         <footer>
             <p>Thinkverse @ <a href="https://devchallenges.io">DevChallenges.io</a></p>
