Add scarecrow Fix main section layout

--- a/index.html
+++ b/index.html
@@ -15,16 +15,23 @@
         <div class="top">
             <p>404 not found</p>
         </div>
-        <main class="font-mono">
-            <header>
-                <h1>I have bad news for you</h1>
-            </header>
-            <section>
-                <p>The page you are looking for might be removed or is temporarily unavailable</p>
-            </section>
-            <footer>
-                <button class="font-mono">Back to homepage</button>
-            </footer>
+        <main class="grid font-mono">
+            <div class="grid-copy">
+                <header>
+                    <h1>I have bad news for you</h1>
+                </header>
+                <section>
+                    <p>The page you are looking for might be removed or is temporarily unavailable</p>
+                </section>
+                <footer>
+                    <button class="font-mono">Back to homepage</button>
+                </footer>
+            </div>
+            <div class="grid-img">
+                <figure>
+                    <img src="public/img/Scarecrow.png" height="350px" alt="A hanging scarecrow" />
+                </figure>
+            </div>
         </main>
         <footer>
             <p>Thinkverse @ <a href="https://devchallenges.io">DevChallenges.io</a></p>
