Fix responsive copy Change "back to homepage" button > link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <p>The page you are looking for might be removed or is temporarily unavailable</p>
                 </section>
                 <footer>
-                    <button class="font-mono">Back to homepage</button>
+                    <a href="#" class="button font-mono">Back to homepage</a>
                 </footer>
             </div>
             <div class="grid-img">
